clase-05/3_Mini_Deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080
